test_regress/t/t_udp_tableend_bad.out
%Error: t/t_udp_tableend_bad.v:11:4: Syntax error: 'endtable' outside of 'table'
   11 |    endtable   
      |    ^~~~~~~~
%Error: Exiting due to
